--- a/init/init.target.rc
+++ b/init/init.target.rc
@@ -206,7 +206,11 @@ on boot
     chmod 0660 /sys/class/leds/vibrator/rtp
     chmod 0666 /dev/awinic_haptic
 
-
+# Setup runtime blkio
+    write /dev/blkio/blkio.weight 1000
+    write /dev/blkio/background/blkio.weight 200
+    write /dev/blkio/blkio.group_idle 2000
+    write /dev/blkio/background/blkio.group_idle 0
 
 on property:vendor.display.lcd_density=560
    setprop dalvik.vm.heapgrowthlimit 256m
