sm8250-common: Introduce a stub kona-post-boot script
This will be used to tune some parameters in the device. Only run
this script after proprietary kernel post-boot has run, so that
these changes are not overriden by the same.

Change-Id: Ibcef27a2813870c62d54c9d762eae9e03da677ad
Signed-off-by: Vaisakh Murali <mvaisakh@statixos.com>
Signed-off-by: chandu078 <chandudyavanapelli03@gmail.com>

--- a/init/init.target.rc
+++ b/init/init.target.rc
@@ -249,3 +249,13 @@ service dcvs-sh /vendor/bin/init.qti.dcvs.sh
 
 on property:vendor.dcvs.prop=1
    start dcvs-sh
+
+service kona-post-boot /vendor/bin/init.kona.post_boot.sh
+    class late_start
+    user root
+    group root system wakelock graphics
+    disabled
+    oneshot
+
+on property:vendor.post_boot.parsed=1
+    start kona-post-boot
